--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.18.2",
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
@@ -20,6 +20,7 @@
     "mongoose": "^5.0.11",
     "mongoose-paginate": "^5.0.3",
     "morgan": "^1.9.0",
+    "multer": "^1.4.0",
     "nodemon": "^1.17.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
