--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pikaday": "^1.7.0",
+    "rangeslider.js": "^2.3.2",
     "serve-favicon": "^2.4.5"
   }
 }
