--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "passport-local": "^1.0.0",
     "pikaday": "^1.7.0",
     "rangeslider.js": "^2.3.2",
+    "request": "^2.88.0",
     "serve-favicon": "^2.4.5"
   }
 }
